Fix search results overflowing the canvas
Currently the search-result-canvas always has space on the bottom. But 
if there are more search results than can fit the screen, a visual bug 
happens, with results being displayed, but outside the canvas.

This change makes it so that the canvas will continue until the very 
bottom edge of the screen. Only when needed, otherwise there is still a 
space.

--- a/shuup/admin/static_src/base/scss/shuup/site-search.scss
+++ b/shuup/admin/static_src/base/scss/shuup/site-search.scss
@@ -102,7 +102,6 @@
     position: absolute;
     top: 40px;
     padding: 15px;
-    max-height: 85vh;
     // overflow-y: auto;
     left: 30px;
     right: 30px;
